submit button works and the next button

--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
         <div id="challenge-container">
             <h2 id="question-text"> Quiz Questions</h2>
             <section id="answer-choices">
-                <button class="quiz-button"> Option A </button>
-                <button class="quiz-button"> Option B </button>
-                <button class="quiz-button"> Option C </button>
-                <button class="quiz-button"> Option D </button>
+                <button class="quiz-button" id="0">  Option A </button>
+                <button class="quiz-button"id="1"> Option B </button>
+                <button class="quiz-button"id="2"> Option C </button>
+                <button class="quiz-button"id="3"> Option D </button>
             </section>
             <section id=feedback-message>
                 <div id = "player" class="music"> </div>
                 <div class="feedback-message"> You are Correct! </div>
                 <div class="feedback-message"> You are Incorrect!</div>
+                <audio id= "my-audio"src = ""> </audio>
             </section>
             </div>
         </main>
