--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="score-container">
         <h2 id="player-score"> Score: <span id="score-value"> 0 </span></h2>
     </div>
-    <p class="how-to-play"> How to play: <span class="directions">Challenge you're JavaScript & CSS skills by taking a
-            quiz.<br /> Go as fast you can! <br /> Earn points by answering each question correctly!</span></p>
+    <p class="how-to-play"> How to play: <br /> <span class="directions">   Challenge you're JavaScript & CSS skills by taking a
+            quiz. Go as fast you can! <br /> Earn points by answering each question correctly!</span></p>
         <div id="challenge-container">
             <h2 id="question-text"> Quiz Questions</h2>
             <section id="answer-choices">
@@ -29,8 +29,9 @@
             </section>
             <section id=feedback-message>
                 <div id = "player" class="music"> </div>
-                <div class="feedback-message"> You are Correct! </div>
-                <div class="feedback-message"> You are Incorrect!</div>
+                <div id = "result"></div>
+                <div class="feedback-message"> </div>
+                <div class="feedback-message"> </div>
                 <audio id= "my-audio"src = ""> </audio>
             </section>
             </div>
@@ -39,6 +40,7 @@
             <nav id="navigation-control">
                 <button id="next-button">Next</button>
                 <button id="submit-button">Submit</button>
+                <button id="restart">Restart Quiz</button>
             </nav>
         </footer>
 </body>
