Winning message alert works Quiz game works

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </div>
     <p class="how-to-play"> How to play: <br /> <span class="directions">   Challenge you're JavaScript & CSS skills by taking a
             quiz. Go as fast you can! <br /> Earn points by answering each question correctly!</span></p>
+            <div class="rules"> Rules:
+                If you get 70 percent correct you win. 
+            </div>
         <div id="challenge-container">
             <h2 id="question-text"> Quiz Questions</h2>
             <section id="answer-choices">
@@ -38,6 +41,7 @@
         </main>
         <footer>
             <nav id="navigation-control">
+                <button id = "mute-button"> Mute</button>
                 <button id="next-button">Next</button>
                 <button id="submit-button">Submit</button>
                 <button id="restart">Restart Quiz</button>
